--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,10 @@ body{
     padding: 0 120px;
 }
 
+.container-gradient{
+    background: linear-gradient(180deg, #2B076E 0%, #0D0D2B 100%);
+}
+
 .crypt--block{
     margin: 0 auto;
     padding: 0;
@@ -138,6 +142,12 @@ body{
     border-radius: 50%;
     padding: 0;
     cursor: pointer;
+}
+
+.btn--calculate{
+    background-color: var(--blue);
+    border-radius: 32px;
+    padding: 16px 32px;
 }
 
 /* illustraitain */
@@ -263,9 +273,6 @@ body{
 
 /* Content */
 
-.content{
-}
-
 .title__block{
     padding-top: 100px;
     padding-bottom: 219px;
@@ -292,7 +299,6 @@ body{
 .crypt__block{
     position: relative;
     padding: 316px 120px 100px;
-    margin-bottom: 316px;
     background: linear-gradient(180deg, #F8F9FB 0%, #FAFBFF 100%);
 }
 
@@ -326,6 +332,11 @@ body{
     border-radius: 16px;
     text-align: center;
     padding: 48px 24px;
+    margin-left: 45px;
+}
+
+.trade__item:hover{
+
 }
 
 .trade__title{
@@ -357,15 +368,90 @@ body{
 }
 
 .calculate{
+    max-width: 942px;
+    min-height: 371px;
     position: absolute;
-    width: 942px;
-    height: 371px;
+    left: 21.6%;
     background-color: var(--white);
     top: -155px;
     border-radius: 16px;
 }
 
 .wrapper{
-    background-color: var(--gray);
+    display: flex;
+    padding: 52px;
+    background-color: #FBFCFE;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
 }
 
+#text{
+    min-width: 403px;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: var(--dark);
+    padding: 8px;
+    border: 0;
+    background-color: transparent;
+    border-bottom: 1px solid #E0E0E0;
+    margin-right: 48px;
+}
+
+#list{
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #E0E0E0;
+    color: var(--dark);
+    min-width: 200px;
+    margin-right: 50px;
+}
+
+.calculate__des{
+    padding: 48px;
+}
+
+.calculate__des--subtitle{
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: var(--blue);
+    text-transform: uppercase;
+    margin: 0 0 16px;
+}
+
+.calculate__des--title{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: var(--dark);
+    text-transform: uppercase;
+    margin: 0 0 4px;
+}
+
+.calculate__des--title .bold{
+    color: var(--blue);
+}
+
+.calculate__des--text{
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: var(--gray);
+    margin: 0;
+}
+
+/* maining__block */
+
+.mainig__block{
+    padding: 88px 0;
+}
+
+.mainig__block-form{
+    margin: 0 auto;
+    display: flex;
+    max-width: 1200px;
+    padding: 48px;
+    background-color:  #3671E9;
+    border-radius: 16px;
+}
